[package]
name = "aws-presigner"
version = "0.1.0"
authors = ["Adam Batkin <adam@batkin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
hex = "0.4.0"
sha2 = "0.8.1"
hmac = "0.7.1"
urlencode = "0.1.2"
percent-encoding = "2.1.0"
chrono = "0.4.10"
